--- a/myadslib/src/main/AndroidManifest.xml
+++ b/myadslib/src/main/AndroidManifest.xml
@@ -1,4 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="p32929.myadslib" >
+    package="p32929.myadslib">
+
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
